# l4d2-mod-manager

./: .gitignore  CMakeLists.txt  README.md  Resources.qrc  cardcontainer.cpp  cardcontainer.h  cardcontainer.ui  gamemanager.cpp  gamemanager.h  header.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  modmanager.cpp  modmanager.h  sqliteobj.cpp  sqliteobj.h
comp/: categorybutton.cpp  categorybutton.h  categorybutton.ui  categorydialog.cpp  categorydialog.h  categorydialog.ui  checkboxlistwidget.cpp  checkboxlistwidget.h  checkboxlistwidget.ui  imageloader.cpp  modcard.cpp  modcard.h  modcard.ui  paramcheckwidget.cpp  paramcheckwidget.h  paramcheckwidget.ui
utils/: imageloader.cpp  imageloader.h  modconflictdetector.cpp  modconflictdetector.h  vpkfileparser.cpp  vpkfileparser.h
widget/: cardcontainer.cpp  cardcontainer.h  cardcontainer.ui  categorylistwidget.cpp  categorylistwidget.h  categorylistwidget.ui  modconflictwidget.cpp  modconflictwidget.h  modconflictwidget.ui  moddetailwidget.cpp  moddetailwidget.h  moddetailwidget.ui
